Disable chat input box resizing since no normal events are generated when it is resized that we could catch to fix up the rest of the box. Shift chat off far right edge by a few pixels to avoid the mac window resize handle. Fixes #4.

--- a/css/deployment.css
+++ b/css/deployment.css
@@ -30,3 +30,7 @@ body {
 #help {
     font-size: 75%;
 }
+
+.ui-chatbox-input-box {
+    resize: none;
+}
